--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.React JS Proyecto Final - E-commerce.docx
+
 # dependencies
 /node_modules
 /.pnp
